2000-07-07  Christopher James Lahey  <clahey@helixcode.com>

	* gui/component/select-names/e-select-names.c: Changed to line
	mode.

2000-07-07  Christopher James Lahey  <clahey@helixcode.com>

	* gui/component/select-names/e-select-names-manager.c,
	gui/component/select-names/e-select-names-model.c: Implemented the
	get_cards function.

	* gui/component/select-names/e-select-names.c: Implemented adding
	cards through the interface.

2000-07-07  Christopher James Lahey  <clahey@helixcode.com>

	* gui/component/select-names/e-select-names-manager.c: Make the
	entry widgets we create editable.

	* gui/component/select-names/e-select-names-model.c: Use
	e_strsplit instead of g_strsplit.  Fixed an off by 1 error.

	* gui/component/select-names/e-select-names-table-model.c: When
	the model changes, send a model changed signal.

	* gui/component/select-names/e-select-names-text-model.c: Made
	changing this work correctly if it's empty.  Made change signals
	propagate properly.  Is a bit better about freeing iterators when
	done.

	* gui/component/select-names/e-select-names.c: Made the finished
	lists be in order instead of being sorted.

2000-07-07  Christopher James Lahey  <clahey@helixcode.com>

	* gui/component/addressbook.c (new_server_cb): Since
	ELDAPServer->port is a char *, allocate a string with the number
	389 contained.

	* gui/component/addressbook.c: Make the select names test test the
	new code instead of the old way of getting to an ESelectNames
	dialog.

	* gui/component/select-names/e-select-names-manager.c: Coded
	storing the model for each section, creating an entry and
	returning it, and for activating the dialog.  Wrote a bit of the
	get_cards code, but not all of it.

	* gui/component/select-names/e-select-names-model.c,
	gui/component/select-names/e-select-names-model.h: Coded all of
	the code needed to make ESelectNamesTextModel work (it doesn't
	yet, but all the code should be there.)  Removed
	E_SELECT_NAMES_MODEL_DATA_TYPE_SEPARATION_MATERIAL.